Laying down first steps for script evaluation